# 3d-agent-md

./: AGENTS.md  IDEA.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
src/3d_agent_md/: __init__.py  blender_client.py  cli.py  procedural.py
tests/: test_blender_client.py  test_cli.py  test_procedural.py
