[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "3d-agent-md"
version = "0.1.0"
description = "Autonomous agents that model, rig, and animate directly in Blender"
readme = "README.md"
license = { text = "GPL-3.0" }
authors = [
    { name = "Avasis AI", email = "contact@avasis.ai" }
]
maintainers = [
    { name = "Avasis AI", email = "contact@avasis.ai" }
]
keywords = [
    "blender",
    "3d",
    "agent",
    "llm",
    "animation",
    "procedural-generation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/avasis-ai/3d-agent-md"
Documentation = "https://github.com/avasis-ai/3d-agent-md#readme"
Repository = "https://github.com/avasis-ai/3d-agent-md.git"
Issues = "https://github.com/avasis-ai/3d-agent-md/issues"

[project.scripts]
3d-agent-md = "3d_agent_md.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/3d_agent_md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
multi_line_output = 3
